[gd_scene load_steps=4 format=1]

[ext_resource path="res://Data/Hud_scripts/Report.gd" type="Script" id=1]
[ext_resource path="res://Data/Deployables/deployable box.png" type="Texture" id=2]
[ext_resource path="res://Data/Hud_scripts/Inventory/inventory.png" type="Texture" id=3]

[node name="Report" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="survivor_card" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="survivor_card"]

transform/pos = Vector2( 12, 12 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="survivor_card"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "open"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label1" type="Label" parent="survivor_card"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 12.0
margin/right = 104.0
margin/bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="report" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="report_ui" type="Control" parent="report"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Sprite" type="Sprite" parent="report/report_ui"]

transform/pos = Vector2( 128, 69 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="report/report_ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -90.0
margin/top = -14.0
margin/right = 88.0
margin/bottom = 0.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "title"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resources" type="RichTextLabel" parent="report/report_ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -103.0
margin/top = 0.0
margin/right = -1.0
margin/bottom = 83.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1


